--- a/sports_athletic/views/sport_athletic_sequence2.xml
+++ b/sports_athletic/views/sport_athletic_sequence2.xml
@@ -2,11 +2,7 @@
 <odoo>
     <data>
 
-
-        <record id="seq_type_affiliation" model="ir.sequence.type">
-            <field name="name">affiliation</field>
-            <field name="code">sports.affiliation</field>
-        </record>
+        <!-- Sequences for affiliation -->
 
         <record id="seq_affiliation" model="ir.sequence">
             <field name="name">affiliation</field>
@@ -16,19 +12,10 @@
             <field name="company_id" eval="False"/>
         </record>
 
-
-
-
         <!-- Sequences for renouvellement -->
 
-
-        <record id="seq_type_renouvellement" model="ir.sequence.type">
-            <field name="name">renouvellement</field>
-            <field name="code">sports.renouvellement</field>
-        </record>
-
         <record id="seq_renouvellement" model="ir.sequence">
-            <field name="name">affiliation</field>
+            <field name="name">renouvellement</field>
             <field name="code">sports.renouvellement</field>
             <field name="prefix">RNN-</field>
             <field name="padding">3</field>
@@ -38,12 +25,6 @@
 
         <!-- Sequences for reaffiliation -->
 
-
-        <record id="seq_type_reaffiliation" model="ir.sequence.type">
-            <field name="name">reaffiliation</field>
-            <field name="code">sports.reaffiliation</field>
-        </record>
-
         <record id="seq_reaffiliation" model="ir.sequence">
             <field name="name">reaffiliation</field>
             <field name="code">sports.reaffiliation</field>
@@ -52,17 +33,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-
-
-
         <!-- Sequences for  athletes reaffiliation -->
-
-
-
-        <record id="seq_type_reaffiliationathletes" model="ir.sequence.type">
-            <field name="name">reaffiliation</field>
-            <field name="code">sports.athletes.reaffiliation</field>
-        </record>
 
         <record id="seq_reaffiliationathletes" model="ir.sequence">
             <field name="name">reaffiliation</field>
@@ -72,48 +43,37 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <!-- Sequences for  athletes reaffiliation -->
-
-        <record id="seq_type_internal_athletes" model="ir.sequence.type">
-            <field name="name">Internal Sports Athletes</field>
-            <field name="code">internal.sports.athletes</field>
-        </record>
+        <!-- Sequences for  Internal Sports Athletes -->
 
         <record id="seq_internal_sports_athletes" model="ir.sequence">
             <field name="name">Internal Sports Athletes</field>
             <field name="code">internal.sports.athletes</field>
+            <field name="prefix">SI/</field>
             <field name="padding">7</field>
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_mre_athletes" model="ir.sequence.type">
-            <field name="name">MRE Sports Athletes</field>
-            <field name="code">mre.sports.athletes</field>
-        </record>
+        <!-- Sequences for  MRE Sports Athletes -->
 
         <record id="seq_mre_athletes" model="ir.sequence">
             <field name="name">MRE Sports Athletes</field>
             <field name="code">mre.sports.athletes</field>
+            <field name="prefix">SM/</field>
             <field name="padding">7</field>
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_foreign_athletes" model="ir.sequence.type">
-            <field name="name">Foreign Sports Athletes</field>
-            <field name="code">foreign.sports.athletes</field>
-        </record>
+        <!-- Sequences for  Foreign Sports Athletes -->
 
         <record id="seq_foreign_athletes" model="ir.sequence">
             <field name="name">Foreign Sports Athletes</field>
             <field name="code">foreign.sports.athletes</field>
+            <field name="prefix">SE/</field>
             <field name="padding">7</field>
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_coach" model="ir.sequence.type">
-            <field name="name">Sports Coach</field>
-            <field name="code">sports.coach</field>
-        </record>
+        <!-- Sequences for  Sports Coach -->
 
         <record id="seq_coach" model="ir.sequence">
             <field name="name">Sports Coach</field>
@@ -122,10 +82,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_leader" model="ir.sequence.type">
-            <field name="name">Sports leader</field>
-            <field name="code">sports.leader</field>
-        </record>
+        <!-- Sequences for  Sports leader -->
 
         <record id="seq_leader" model="ir.sequence">
             <field name="name">Sports Leader</field>
@@ -134,10 +91,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_official" model="ir.sequence.type">
-            <field name="name">Sports Official</field>
-            <field name="code">sports.official</field>
-        </record>
+        <!-- Sequences for  Sports Official -->
 
         <record id="seq_official" model="ir.sequence">
             <field name="name">Sports Official</field>
@@ -149,10 +103,6 @@
 
         <!-- Sequences for  athletes sanctions -->
 
-        <record id="sports_sequence_sanctions_type" model="ir.sequence.type">
-            <field name="name">sports sanctions</field>
-            <field name="code">sports.sanctions</field>
-        </record>
         <record id="sports_sequence_sanctions" model="ir.sequence">
             <field name="name">sports sanctions</field>
             <field name="code">sports.sanctions</field>
@@ -161,12 +111,6 @@
         </record>
 
         <!-- Sequences for  athletes mutations -->
-
-
-        <record id="seq_type_mutations" model="ir.sequence.type">
-            <field name="name">mutations</field>
-            <field name="code">sports.mutations</field>
-        </record>
 
         <record id="seq_sanctions" model="ir.sequence">
             <field name="name">mutations</field>
@@ -179,12 +123,6 @@
 
 
         <!-- Sequences for  sports.edition.carteslicences -->
-
-
-        <record id="seq_type_carteslicences" model="ir.sequence.type">
-            <field name="name">sports.edition.carteslicences</field>
-            <field name="code">sports.edition.carteslicences</field>
-        </record>
 
         <record id="seq_carteslicences" model="ir.sequence">
             <field name="name">sports.edition.carteslicences</field>
@@ -199,12 +137,6 @@
 
         <!-- Sequences for  sports.epreuve -->
 
-
-        <record id="seq_type_epreuve" model="ir.sequence.type">
-            <field name="name">sports.epreuve</field>
-            <field name="code">sports.epreuve</field>
-        </record>
-
         <record id="seq_epreuve" model="ir.sequence">
             <field name="name">sports.epreuve</field>
             <field name="code">sports.epreuve</field>
@@ -217,12 +149,6 @@
 
         <!-- Sequences for  sports.competition -->
 
-
-        <record id="seq_type_competition" model="ir.sequence.type">
-            <field name="name">sports.competition</field>
-            <field name="code">sports.competition</field>
-        </record>
-
         <record id="seq_competition" model="ir.sequence">
             <field name="name">sports.competition</field>
             <field name="code">sports.competition</field>
@@ -233,13 +159,7 @@
 
 
 
-        <!-- Sequences for  sports.competition -->
-
-
-        <record id="seq_type_achatdemande" model="ir.sequence.type">
-            <field name="name">achat.demande</field>
-            <field name="code">achat.demande</field>
-        </record>
+        <!-- Sequences for  achat.demande -->
 
         <record id="seq_achatdemande" model="ir.sequence">
             <field name="name">achat.demande</field>
@@ -249,10 +169,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_mission_order" model="ir.sequence.type">
-            <field name="name">sa.mission.order</field>
-            <field name="code">sa.mission.order</field>
-        </record>
+        <!-- Sequences for  sa.mission.order -->
 
         <record id="seq_mission_order" model="ir.sequence">
             <field name="name">sa.mission.order</field>
@@ -262,10 +179,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_sa_expense" model="ir.sequence.type">
-            <field name="name">sa.expense</field>
-            <field name="code">sa.expense</field>
-        </record>
+        <!-- Sequences for  sa.expense -->
 
         <record id="seq_sa_expense" model="ir.sequence">
             <field name="name">sa.expense</field>
@@ -275,10 +189,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_sports_edition_assurances" model="ir.sequence.type">
-            <field name="name">sports.edition.assurances</field>
-            <field name="code">sports.edition.assurances</field>
-        </record>
+        <!-- Sequences for  sports.edition.assurances -->
 
         <record id="seq_sports_edition_assurances" model="ir.sequence">
             <field name="name">sports.edition.assurances</field>
@@ -288,10 +199,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_sports_excel_assurances" model="ir.sequence.type">
-            <field name="name">sports.excel.assurances</field>
-            <field name="code">sports.excel.assurances</field>
-        </record>
+        <!-- Sequences for  sports.excel.assurances -->
 
         <record id="seq_sports_excel_assurances" model="ir.sequence">
             <field name="name">sports.excel.assurances</field>
@@ -301,10 +209,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_sports_passage_categorie" model="ir.sequence.type">
-            <field name="name">sports.passage.categorie</field>
-            <field name="code">sports.passage.categorie</field>
-        </record>
+        <!-- Sequences for  sports.passage.categorie -->
 
         <record id="seq_sports_passage_categorie" model="ir.sequence">
             <field name="name">sports.passage.categorie</field>
@@ -314,10 +219,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_sports_anneeblanche" model="ir.sequence.type">
-            <field name="name">sports.anneeblanche</field>
-            <field name="code">sports.anneeblanche</field>
-        </record>
+        <!-- Sequences for  sports.anneeblanche -->
 
         <record id="seq_sports_anneeblanche" model="ir.sequence">
             <field name="name">sports.anneeblanche</field>
@@ -327,11 +229,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-
-        <record id="seq_type_general_assembly" model="ir.sequence.type">
-            <field name="name">general.assembly</field>
-            <field name="code">general.assembly</field>
-        </record>
+        <!-- Sequences for  general.assembly -->
 
         <record id="seq_general_assembly" model="ir.sequence">
             <field name="name">general.assembly</field>
@@ -341,10 +239,7 @@
             <field name="company_id" eval="False"/>
         </record>
 
-        <record id="seq_type_general_assembly_member" model="ir.sequence.type">
-            <field name="name">general.assembly.member</field>
-            <field name="code">general.assembly.member</field>
-        </record>
+        <!-- Sequences for general.assembly.member -->
 
         <record id="seq_general_assembly_member" model="ir.sequence">
             <field name="name">general.assembly.member</field>
@@ -352,6 +247,15 @@
             <field name="prefix">MC/</field>
             <field name="padding">4</field>
             <field name="company_id" eval="False"/>
+        </record>
+
+        <!-- Sequences for general.assembly.member -->
+
+        <record id="seq_athlete_wkf_annual_calendar" model="ir.sequence">
+            <field name="name">athlete.wkf.annual.calendar</field>
+            <field name="code">athlete.wkf.annual.calendar</field>
+            <field name="prefix">CAL/</field>
+            <field name="padding">4</field>
         </record>
 
     </data>
